--- a/NetPrints/NetPrints.csproj
+++ b/NetPrints/NetPrints.csproj
@@ -7,8 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Gapotchenko.FX" Version="2022.2.7" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.2.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Toolkit.Mvvm\Microsoft.Toolkit.Mvvm.csproj" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
   </ItemGroup>
 </Project>
